<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.StudentSignUp">




    <ImageView
        android:id="@+id/jsu_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/jsutigers" />

    <ImageView
        android:id="@+id/tiger_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:src="@drawable/tiger" />

    <EditText
        android:id="@+id/edt_frstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/radioGroup"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/firstname"
        android:nextFocusDown="@+id/edt_password"
        android:paddingStart="13dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edt_lstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_frstname"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/lastname"
        android:nextFocusDown="@+id/edt_password"
        android:paddingStart="13dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_lstname"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/email"
        android:nextFocusDown="@+id/edt_password"
        android:paddingStart="13dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/std_id"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/id"
        android:paddingStart="13dp"
        android:paddingEnd="12dp" />

    <EditText
        android:id="@+id/roll_number"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_below="@id/edt_email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/roll"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/std_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        tools:ignore="RtlSymmetry" />



    <Spinner
        android:id="@+id/edt_year"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_txt_background"
        android:entries="@array/year"
        android:paddingStart="3dp"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/edt_button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="213dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/std_Btn"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginVertical="140dp"
            android:layout_marginStart="100dp"
            android:checked="true"
            android:onClick="onClick"
            android:text="@string/student"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/faculty_btn"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginVertical="140dp"
            android:checked="false"
            android:onClick="onClick"
            android:text="@string/faculty"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml" />


    </RadioGroup>

</RelativeLayout>