<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/jsu_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/jsutigers"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/tiger_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="120dp"
        android:src="@drawable/tiger" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/jsu_logo"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_txt_background"
        android:hint="@string/email"
        android:nextFocusDown="@+id/edt_password"
        android:paddingStart="13dp"
        android:paddingEnd="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        android:paddingEnd="1dp"
        android:background="@drawable/edit_txt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/edt_background_color"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edt_button_background"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_marginTop="30dp"
        android:layout_marginStart="225dp"
        android:background="@drawable/edt_button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>